--- a/src/scss/pages/explore.scss
+++ b/src/scss/pages/explore.scss
@@ -14,7 +14,7 @@
     .content {
       position: relative;
 
-      @media only screen and (min-width: $tablet-min) and (max-width: $tablet-max) and (orientation: landscape),
+      @media only screen and (min-height: $tablet-min) and (max-width: $tablet-max) and (orientation: landscape),
         only screen and (min-width: $desktop-min) {
         padding-left: 24px;
         border-left: 1px solid rgba(46, 43, 69, 0.1);
@@ -174,14 +174,28 @@
             }
 
             .product-cover {
-              width: 100px;
-              height: 100px;
+              width: 112px;
+              height: 100%;
               border-radius: 0;
+              position: absolute;
+              top: 0;
+              left: 0;
+              border-top-left-radius: 24px;
+              border-bottom-left-radius: 24px;
+
+              > img {
+                top: 50%;
+                left: 50%;
+                width: auto;
+                min-width: 100%;
+                height: 100%;
+                transform: translate(-50%, -50%);
+              }
             }
 
             .product-summary {
               padding: 0;
-              padding-left: 12px;
+              padding-left: 112px;
 
               .footer {
                 flex-direction: column;
@@ -219,6 +233,7 @@
       padding-bottom: 36px;
 
       @media only screen and (max-width: $mobile-max),
+        only screen and (max-height: $mobile-max) and (orientation: landscape),
         only screen and (min-width: $tablet-min) and (max-width: $tablet-max) and (orientation: portrait) {
         display: none;
       }
