--- a/src/scss/pages/contentDetails.scss
+++ b/src/scss/pages/contentDetails.scss
@@ -3,8 +3,11 @@
 @use '../elements/button' as b;
 @use '../elements/author';
 
-.content-details + .main-footer {
-  padding-bottom: 66px;
+@media only screen and (max-width: $mobile-max) and (orientation: portrait),
+  only screen and (max-height: $mobile-max) and (orientation: landscape) {
+  .content-details + .main-footer {
+    padding-bottom: 66px;
+  }
 }
 
 .content-details {
@@ -16,7 +19,8 @@
     padding-bottom: 32px;
     position: relative;
 
-    @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+    @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+      only screen and (max-height: $mobile-max) and (orientation: landscape) {
       padding-top: calc(9 / 16 * 100% + 24px);
     }
   }
@@ -35,7 +39,16 @@
   .content-wrap {
     padding-right: 384px;
 
-    @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+    @media only screen and (min-width: $tablet-min) and (orientation: portrait) {
+      padding-right: 270px;
+    }
+
+    @media only screen and (min-width: $desktop-min) and (max-width: $desktop-max) and (orientation: portrait) {
+      padding-right: 332px;
+    }
+
+    @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+      only screen and (max-height: $mobile-max) and (orientation: landscape) {
       padding-right: 0;
 
       &.col {
@@ -116,7 +129,8 @@
       padding-bottom: 24px;
       z-index: 1;
 
-      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+        only screen and (max-height: $mobile-max) and (orientation: landscape) {
         width: 100%;
         height: auto;
         left: 0;
@@ -134,7 +148,16 @@
       overflow: hidden;
       box-shadow: 0px 3px 7px rgba(14, 31, 53, 0.12);
 
-      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      @media only screen and (min-width: $tablet-min) and (max-width: $tablet-max) and (orientation: portrait) {
+        width: 234px;
+      }
+
+      @media only screen and (min-width: $desktop-min) and (max-width: $desktop-max) and (orientation: portrait) {
+        width: 296px;
+      }
+
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+        only screen and (max-height: $mobile-max) and (orientation: landscape) {
         width: 100%;
         border-radius: 0;
         box-shadow: none;
@@ -145,7 +168,8 @@
     &-content {
       padding: 24px 12px;
 
-      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+        only screen and (max-height: $mobile-max) and (orientation: landscape) {
         position: fixed;
         bottom: 0;
         left: 0;
@@ -159,7 +183,8 @@
     }
 
     &-cover {
-      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+        only screen and (max-height: $mobile-max) and (orientation: landscape) {
         &::before {
           padding-top: calc(9 / 16 * 100%);
         }
@@ -174,7 +199,8 @@
     }
 
     .shop {
-      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+        only screen and (max-height: $mobile-max) and (orientation: landscape) {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -184,7 +210,8 @@
       &-price {
         margin-bottom: 12px;
 
-        @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+        @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+          only screen and (max-height: $mobile-max) and (orientation: landscape) {
           margin-bottom: 0;
         }
 
@@ -219,7 +246,8 @@
         display: flex;
         flex-direction: column;
 
-        @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+        @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+          only screen and (max-height: $mobile-max) and (orientation: landscape) {
           flex-direction: row-reverse;
         }
 
@@ -229,7 +257,8 @@
           margin: 6px 0;
           @include m.button-reset;
 
-          @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+          @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+            only screen and (max-height: $mobile-max) and (orientation: landscape) {
             margin: 0;
           }
 
@@ -251,7 +280,8 @@
               @include m.inline-svg-icon(28px, var(--brand-orange));
             }
 
-            @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+            @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+              only screen and (max-height: $mobile-max) and (orientation: landscape) {
               width: 60px;
               padding: 0 !important;
               margin-right: 12px;
@@ -397,7 +427,8 @@
           align-items: center;
           justify-content: space-between;
 
-          @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+          @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+            only screen and (min-width: $tablet-min) and (max-width: $tablet-max) and (orientation: portrait) {
             flex-direction: column;
             align-items: flex-start;
           }
@@ -603,8 +634,46 @@
           .card {
             height: 174px;
 
-            .footer {
-              margin-top: auto;
+            .product-cover {
+              position: absolute;
+              left: 0;
+              top: 0;
+              width: 112px;
+              height: 100%;
+              border-top-left-radius: 24px;
+              border-bottom-left-radius: 24px;
+
+              > img {
+                top: 50%;
+                left: 50%;
+                width: auto;
+                min-width: 100%;
+                height: 100%;
+                transform: translate(-50%, -50%);
+              }
+            }
+
+            .product-summary {
+              padding-left: 112px;
+
+              .footer {
+                margin-top: auto;
+              }
+            }
+          }
+        }
+
+        @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+          only screen and (max-height: $mobile-max) and (orientation: landscape) {
+          .carousel-nav {
+            &-left {
+              left: 0;
+              margin-left: -8px;
+            }
+
+            &-right {
+              right: 0;
+              margin-right: -8px;
             }
           }
         }
@@ -613,7 +682,11 @@
   }
 
   footer.related {
-    padding: 20px 12px 0;
+    background-color: var(--brand-white);
+    // margin-bottom: 24px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
+    padding: 20px 12px 16px;
 
     > h2 {
       font-style: normal;
@@ -625,10 +698,58 @@
       margin-bottom: 12px;
     }
 
-    @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
-      .carousel-container {
-        padding-left: 0;
-        padding-right: 0;
+    .carousel-container {
+      margin: 0px -12px -16px;
+      padding: 0 12px 16px;
+
+      .card {
+        height: 174px;
+
+        .product-cover {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 112px;
+          height: 100%;
+          border-top-left-radius: 24px;
+          border-bottom-left-radius: 24px;
+
+          > img {
+            top: 50%;
+            left: 50%;
+            width: auto;
+            min-width: 100%;
+            height: 100%;
+            transform: translate(-50%, -50%);
+          }
+        }
+
+        .product-summary {
+          padding-left: 112px;
+
+          .footer {
+            margin-top: auto;
+          }
+        }
+      }
+    }
+
+    @media only screen and (max-width: $mobile-max) and (orientation: portrait),
+      only screen and (max-height: $mobile-max) and (orientation: landscape) {
+      // .carousel-container {
+      //     padding-left: 0;
+      //     padding-right: 0;
+      // }
+      .carousel-nav {
+        &-left {
+          left: 0;
+          margin-left: -8px;
+        }
+
+        &-right {
+          right: 0;
+          margin-right: -8px;
+        }
       }
     }
   }
