🐛 Fix lesson page
- Fix carousel pattern
- Fix related courses display
- Fix responsive bug

--- a/src/views/Lesson/layout.html
+++ b/src/views/Lesson/layout.html
@@ -84,7 +84,7 @@
                     description: "Exercitation\ commodo\ magna\ cillum\ officia\
                     amet\ mollit\ ullamco\ voluptate\ magna\ non\ id\ ad\
                     ipsum.", cover: 'item-cover-1.jpg', rating: 4.55, price:
-                    115.99, displayType: 'col' }) %>
+                    115.99, displayType: 'mini' }) %>
                   </div>
                   <div class="carousel-item swiper-slide">
                     <%= require('../partials/cards/product.html')({ title:
@@ -93,7 +93,7 @@
                     anim\ sunt\ labore\ exercitation\ labore\ voluptate\
                     commodo\ excepteur\ cillum\ minim", cover:
                     'item-cover-2.jpg', rating: 4.92, price: 72.45, displayType:
-                    'col' }) %>
+                    'mini' }) %>
                   </div>
                   <div class="carousel-item swiper-slide">
                     <%= require('../partials/cards/product.html')({ title: "Ea\
@@ -102,13 +102,15 @@
                     veniam\ cupidatat\ ut\ ad\ veniam\ id\ anim\ ad\ enim\
                     deserunt\ dolor\ nisi\ esse\ consectetur", cover:
                     'item-cover-3.jpg', rating: 3.23, price: 99, displayType:
-                    'col' }) %>
+                    'mini' }) %>
                   </div>
                   <div class="carousel-item swiper-slide">
                     <%= require('../partials/cards/product.html')({ title:
                     "Lorem\ Labore\ Ullamco\ Et\ Est\ Labore\ Dolore\ Cillum",
+                    description: "Ea\ veniam\ cupidatat\ ut\ ad\ veniam\ id\
+                    anim\ ad\ enim\ deserunt\ dolor\ nisi\ esse\ consectetur",
                     cover: 'item-cover-4.jpg', rating: 1.5, price: 91.44,
-                    displayType: 'col' }) %>
+                    displayType: 'mini' }) %>
                   </div>
                 </div>
               </div>
