--- a/src/scss/pages/lesson.scss
+++ b/src/scss/pages/lesson.scss
@@ -88,6 +88,7 @@
     padding-top: 24px;
 
     @media only screen and (max-width: $mobile-max),
+      only screen and (max-height: $mobile-max) and (orientation: landscape),
       only screen and (max-width: $tablet-max) and (orientation: portrait) {
       width: 100%;
       padding-left: 12px;
@@ -111,6 +112,7 @@
     }
 
     @media only screen and (max-width: $mobile-max),
+      only screen and (max-height: $mobile-max) and (orientation: landscape),
       only screen and (max-width: $tablet-max) and (orientation: portrait) {
       order: 0;
     }
@@ -128,6 +130,7 @@
     box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
 
     @media only screen and (max-width: $mobile-max),
+      only screen and (max-height: $mobile-max) and (orientation: landscape),
       only screen and (max-width: $tablet-max) and (orientation: portrait) {
       order: 3;
     }
@@ -206,6 +209,7 @@
     padding: 16px 12px;
 
     @media only screen and (max-width: $mobile-max),
+      only screen and (max-height: $mobile-max) and (orientation: landscape),
       only screen and (max-width: $tablet-max) and (orientation: portrait) {
       order: 2;
     }
@@ -264,6 +268,7 @@
     }
 
     @media only screen and (max-width: $mobile-max),
+      only screen and (max-height: $mobile-max) and (orientation: landscape),
       only screen and (max-width: $tablet-max) and (orientation: portrait) {
       order: 1;
     }
@@ -443,7 +448,14 @@
   }
 
   .related {
+    background-color: var(--brand-white);
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
+    padding: 20px 12px 16px;
+    margin-bottom: 24px;
+
     @media only screen and (max-width: $mobile-max),
+      only screen and (max-height: $mobile-max) and (orientation: landscape),
       only screen and (max-width: $tablet-max) and (orientation: portrait) {
       padding-left: 12px;
       padding-right: 12px;
@@ -460,36 +472,90 @@
       margin-bottom: 12px;
     }
 
-    .carousel {
-      @media only screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
-        padding-left: 0;
-        padding-right: 0;
-        margin-left: 12px;
-        margin-right: 12px;
-        width: calc(100% - 24px);
-        overflow: hidden;
+    // .carousel {
+    //   @media only screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
+    //     padding-left: 0;
+    //     padding-right: 0;
+    //     margin-left: 12px;
+    //     margin-right: 12px;
+    //     width: calc(100% - 24px);
+    //     overflow: hidden;
+    //   }
+    //   // @media only screen and (max-width: $mobile-max) {
+    //   //   margin-left: 0;
+    //   //   margin-right: 0;
+    //   // }
+
+    //   .carousel-container {
+    //     @media only screen and (min-width: $tablet-min) and (max-width: $tablet-max) and (orientation: portrait) {
+    //       padding-left: 12px;
+    //       padding-right: 12px;
+    //       margin-left: -12px;
+    //       margin-right: -12px;
+    //     }
+    //   }
+
+    //   @media only screen and (min-width: $tablet-min) {
+    //     .carousel-nav-left {
+    //       margin-left: 0;
+    //     }
+
+    //     .carousel-nav-right {
+    //       margin-right: 0;
+    //     }
+    //   }
+    // }
+
+    .carousel-container {
+      margin: 0px -12px -16px;
+      padding: 0 12px 16px;
+
+      .card {
+        height: 174px;
+
+        .product-cover {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 112px;
+          height: 100%;
+          border-top-left-radius: 24px;
+          border-bottom-left-radius: 24px;
+
+          > img {
+            top: 50%;
+            left: 50%;
+            width: auto;
+            min-width: 100%;
+            height: 100%;
+            transform: translate(-50%, -50%);
+          }
+        }
+
+        .product-summary {
+          padding-left: 112px;
+
+          .footer {
+            margin-top: auto;
+          }
+        }
       }
-      // @media only screen and (max-width: $mobile-max) {
-      //   margin-left: 0;
-      //   margin-right: 0;
+    }
+
+    @media only screen and (max-width: $tablet-max) {
+      // .carousel-container {
+      //     padding-left: 0;
+      //     padding-right: 0;
       // }
-
-      .carousel-container {
-        @media only screen and (min-width: $tablet-min) and (max-width: $tablet-max) and (orientation: portrait) {
-          padding-left: 12px;
-          padding-right: 12px;
-          margin-left: -12px;
-          margin-right: -12px;
-        }
-      }
-
-      @media only screen and (min-width: $tablet-min) {
-        .carousel-nav-left {
-          margin-left: 0;
+      .carousel-nav {
+        &-left {
+          left: 0;
+          margin-left: 8px;
         }
 
-        .carousel-nav-right {
-          margin-right: 0;
+        &-right {
+          right: 0;
+          margin-right: 8px;
         }
       }
     }
@@ -502,8 +568,7 @@
     max-width: 430px;
     border-left: 1px solid rgba(46, 43, 69, 0.16);
 
-    @media only screen and (max-width: $mobile-max),
-      only screen and (max-width: $tablet-max) {
+    @media only screen and (max-width: $tablet-max) {
       display: none;
     }
 
