--- a/src/views/ContentDetail/sidebar.html
+++ b/src/views/ContentDetail/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="sidebar">
   <div class="sidebar-wrap">
     <div class="sidebar-cover ratio ratio-4x3">
-      <img src="<%= require(`../../images/${cover}`) %>" alt="<%= title %>" />
+      <img src="<%= cover %>" alt="<%= title %>" />
     </div>
 
     <div class="sidebar-content">
