--- a/src/views/Explore/grid.html
+++ b/src/views/Explore/grid.html
@@ -26,7 +26,7 @@
     author: { photo: 'author-4.jpg', name: 'Dylan\ Atkins', company: 'GoSwim' },
     rating: 1.5, price: 91.44, displayType: 'col', productType: 'Podcast' }) %>
   </div>
-  <div class="col-6 col-md-4 col-xl-3 grid-item">
+  <!-- <div class="col-6 col-md-4 col-xl-3 grid-item">
     <%= require('../partials/cards/product.html')({ title: "Culpa\ Qui\ Veniam\
     Do\ Occaecat\ Eiusmod\ Incididunt\ Nisi\ Dolore\ Labore\ Est\ Officia",
     cover: 'item-cover-5.jpg', author: { photo: 'author-5.jpg', name: 'Joel\
@@ -79,5 +79,5 @@
     cover: 'item-cover-2.jpg', author: { photo: 'author-2.jpg', name: 'Chandni\
     Craft', company: 'Global\ Cycling\ Network' }, rating: 4.92, price: 72.45,
     displayType: 'col', productType: 'Video' }) %>
-  </div>
+  </div> -->
 </div>
