--- a/src/views/Explore/list.html
+++ b/src/views/Explore/list.html
@@ -41,7 +41,7 @@
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
     co...', productType: 'Podcast' }) %>
   </div>
-  <div class="col-12 list-item">
+  <!-- <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Culpa\ Qui\ Veniam\
     Do\ Occaecat\ Eiusmod\ Incididunt\ Nisi\ Dolore\ Labore\ Est\ Officia",
     cover: 'item-cover-5.jpg', author: { photo: 'author-5.jpg', name: 'Joel\
@@ -121,5 +121,5 @@
     in\ laboris\ reprehenderit\ magna\ nulla\ amet\ aute.\ Dolor\ labore\
     pariatur\ non\ laborum\ qui\ tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\
     exercitation\ minim.\ Deserunt\ co...', productType: 'Video' }) %>
-  </div>
+  </div> -->
 </div>
