--- a/src/views/ContentDetail/curriculum.html
+++ b/src/views/ContentDetail/curriculum.html
@@ -1,11 +1,38 @@
+<!-- prettier-ignore -->
+<%
+const curriculum = Array.from(obj);
+const sectionCount = curriculum.length;
+const lessonsCount = curriculum.reduce((acc, section) => acc + section.lessons.length, 0);
+const totalTimeLength = curriculum.reduce((acc, section) => {
+  return acc + section.lessons.reduce((_acc, lesson) => _acc + lesson.duration, 0)
+}, 0);
+const formatTime = (totalSeconds, useAbbr = false) => {
+  const h = Math.floor(totalSeconds / 3600);
+  const m = Math.floor((totalSeconds % 3600) / 60);
+  const s = Math.floor(totalSeconds % 60);
+  let str = '';
+
+  if (useAbbr) {
+    str = `${h}h ${m}m ${s}s`
+  } else {
+    if (h > 0) {
+      str += `${h}:${m < 10 ? '0' : ''}`
+    }
+    str += `${m}:${s < 10 ? '0' : ''}${s}`
+  }
+
+  return str;
+}
+%>
 <section class="curriculum">
   <div class="curriculum-top">
     <h2>Course Curriculum</h2>
 
     <div class="info">
       <div class="length">
-        <span>2 sections</span><span>&nbsp;•&nbsp;</span><span>6 lessons</span
-        ><span>&nbsp;•&nbsp;</span><span>2h 1m total length</span>
+        <span><%= sectionCount %> sections</span><span>&nbsp;•&nbsp;</span
+        ><span><%= lessonsCount %> lessons</span><span>&nbsp;•&nbsp;</span
+        ><span><%= formatTime(totalTimeLength, true) %> total length</span>
       </div>
       <a href="#" class="curriculum-accordion-toggle-all" data-trigger="expand"
         >Expand all lessons sections</a
@@ -14,7 +41,44 @@
   </div>
 
   <div class="curriculum-accordion accordion">
+    <% let i = 0; curriculum.forEach(section => { %>
     <div class="accordion-item">
+      <div class="accordion-item-header">
+        <h3 class="title"><%= section.name %></h3>
+        <div class="lessons-counter"><%= section.lessons.length %> lessons</div>
+        <button class="accordion-toggler">
+          <%= require('../../images/icons/collapse.svg?inline') %>
+        </button>
+      </div>
+
+      <div class="accordion-item-content">
+        <% section.lessons.forEach(lesson => { %>
+        <div class="lesson">
+          <div class="lesson-status">
+            <i><%= require('../../images/icons/play.svg?inline') %></i>
+          </div>
+          <div class="lesson-order">#<%= ++i %></div>
+          <div class="lesson-detail">
+            <a href="#" class="lesson-title"><%= lesson.title %></a>
+            <div class="lesson-meta">
+              <div
+                class="product-tag"
+                data-product-type="<%= lesson.type.toLowerCase() %>"
+              >
+                <%= lesson.type %>
+              </div>
+              <div class="lesson-duration">
+                <%= formatTime(lesson.duration) %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% }) %>
+      </div>
+    </div>
+    <% }) %>
+
+    <!-- <div class="accordion-item">
       <div class="accordion-item-header">
         <h3 class="title">Introduction</h3>
         <div class="lessons-counter">4 lessons</div>
@@ -88,9 +152,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="accordion-item">
+    <!-- <div class="accordion-item">
       <div class="accordion-item-header">
         <h3 class="title">Vel Egestas de Yoga</h3>
         <div class="lessons-counter">2 lessons</div>
@@ -134,6 +198,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
