--- a/src/views/ContentDetail/header.html
+++ b/src/views/ContentDetail/header.html
@@ -1,5 +1,5 @@
 <header>
-  <h1><%= title ?? "Cillum Nulla Dolore Voluptate Deserunt" %></h1>
+  <h1><%= title %></h1>
   <%= desc %>
   <div class="info">
     <div
