--- a/src/views/Explore/grid.html
+++ b/src/views/Explore/grid.html
@@ -1,32 +1,24 @@
+<% const items = Array.from(obj); %>
 <div class="row">
-  <div class="col-6 col-md-4 col-xl-3 grid-item">
-    <%= require('../partials/cards/product.html')({ title: "Exercitation\
-    commodo\ magna\ cillum\ officia\ amet\ mollit\ ullamco\ voluptate\ magna\
-    non\ id\ ad\ ipsum.", cover: 'item-cover-1.jpg', author: { photo:
-    'author-1.jpg', name: 'Chaya\ Davidson', company: 'Football\ Daily' },
-    rating: 4.55, price: 115.99, displayType: 'col', productType: 'Course' }) %>
-  </div>
-  <div class="col-6 col-md-4 col-xl-3 grid-item">
-    <%= require('../partials/cards/product.html')({ title: "Nulla\ Anim\ Sunt\
-    Labore\ Exercitation\ Labore\ Voluptate\ Commodo\ Excepteur\ Cillum\ Minim",
-    cover: 'item-cover-2.jpg', author: { photo: 'author-2.jpg', name: 'Chandni\
-    Craft', company: 'Global\ Cycling\ Network' }, rating: 4.92, price: 72.45,
-    displayType: 'col', productType: 'Course' }) %>
-  </div>
-  <div class="col-6 col-md-4 col-xl-3 grid-item">
-    <%= require('../partials/cards/product.html')({ title: "Ea\ Veniam\
-    Cupidatat\ Ut\ Ad\ Veniam\ Id\ Anim\ Ad\ Enim\ Deserunt\ Dolor\ Nisi\ Esse\
-    Consectetur", cover: 'item-cover-3.jpg', author: { photo: 'author-3.jpg',
-    name: 'Bobbie\ Hudson', company: 'Daily\ Cyclist\ News' }, rating: 3.23,
-    price: 99, displayType: 'col', productType: 'Podcast' }) %>
-  </div>
+  <% items.forEach(item => { %>
+  <a
+    href="<%= `/courses/${item.permalink}` %>"
+    class="col-6 col-md-4 col-xl-3 grid-item"
+  >
+    <%= require('../partials/cards/product.html')({ title: item.title, cover:
+    item.cover, author: { photo: item.author.photo, name: item.author.name,
+    company: item.author.org }, rating: item.rating, price: item.price,
+    displayType: 'col', productType: item.type }) %>
+  </a>
+  <% }) %>
+  <!-- Dummy placeholders -->
   <div class="col-6 col-md-4 col-xl-3 grid-item">
     <%= require('../partials/cards/product.html')({ title: "Lorem\ Labore\
     Ullamco\ Et\ Est\ Labore\ Dolore\ Cillum", cover: 'item-cover-4.jpg',
     author: { photo: 'author-4.jpg', name: 'Dylan\ Atkins', company: 'GoSwim' },
     rating: 1.5, price: 91.44, displayType: 'col', productType: 'Podcast' }) %>
   </div>
-  <!-- <div class="col-6 col-md-4 col-xl-3 grid-item">
+  <div class="col-6 col-md-4 col-xl-3 grid-item">
     <%= require('../partials/cards/product.html')({ title: "Culpa\ Qui\ Veniam\
     Do\ Occaecat\ Eiusmod\ Incididunt\ Nisi\ Dolore\ Labore\ Est\ Officia",
     cover: 'item-cover-5.jpg', author: { photo: 'author-5.jpg', name: 'Joel\
@@ -79,5 +71,5 @@
     cover: 'item-cover-2.jpg', author: { photo: 'author-2.jpg', name: 'Chandni\
     Craft', company: 'Global\ Cycling\ Network' }, rating: 4.92, price: 72.45,
     displayType: 'col', productType: 'Video' }) %>
-  </div> -->
+  </div>
 </div>
