--- a/src/views/Explore/list.html
+++ b/src/views/Explore/list.html
@@ -1,36 +1,15 @@
+<% const items = Array.from(obj); %>
 <div class="row">
-  <div class="col-12 list-item">
-    <%= require('../partials/cards/product.html')({ title: "Exercitation\
-    commodo\ magna\ cillum\ officia\ amet\ mollit\ ullamco\ voluptate\ magna\
-    non\ id\ ad\ ipsum.", cover: 'item-cover-1.jpg', author: { photo:
-    'author-1.jpg', name: 'Chaya\ Davidson', company: 'Football\ Daily' },
-    rating: 4.55, price: 115.99, displayType: 'row', description: 'Magna\
-    pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\ magna\
-    nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\
-    dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
-    co...', productType: 'Course' }) %>
-  </div>
-  <div class="col-12 list-item">
-    <%= require('../partials/cards/product.html')({ title: "Nulla\ Anim\ Sunt\
-    Labore\ Exercitation\ Labore\ Voluptate\ Commodo\ Excepteur\ Cillum\ Minim",
-    cover: 'item-cover-2.jpg', author: { photo: 'author-2.jpg', name: 'Chandni\
-    Craft', company: 'Global\ Cycling\ Network' }, rating: 4.92, price: 72.45,
-    displayType: 'row', description: 'Magna\ pariatur\ nulla\ proident\ aliquip\
-    in\ laboris\ reprehenderit\ magna\ nulla\ amet\ aute.\ Dolor\ labore\
-    pariatur\ non\ laborum\ qui\ tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\
-    exercitation\ minim.\ Deserunt\ co...', productType: 'Course' }) %>
-  </div>
-  <div class="col-12 list-item">
-    <%= require('../partials/cards/product.html')({ title: "Ea\ Veniam\
-    Cupidatat\ Ut\ Ad\ Veniam\ Id\ Anim\ Ad\ Enim\ Deserunt\ Dolor\ Nisi\ Esse\
-    Consectetur", cover: 'item-cover-3.jpg', author: { photo: 'author-3.jpg',
-    name: 'Bobbie\ Hudson', company: 'Daily\ Cyclist\ News' }, rating: 3.23,
-    price: 99, displayType: 'row', description: 'Magna\ pariatur\ nulla\
-    proident\ aliquip\ in\ laboris\ reprehenderit\ magna\ nulla\ amet\ aute.\
-    Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\ dolore\ qui\ excepteur\
-    fugiat\ aliqua\ exercitation\ minim.\ Deserunt\ co...', productType:
-    'Podcast' }) %>
-  </div>
+  <% items.forEach(item => { %>
+  <a href="<%= `/courses/${item.permalink}` %>" class="col-12 list-item">
+    <%= require('../partials/cards/product.html')({ title: item.title, cover:
+    item.cover, author: { photo: item.author.photo, name: item.author.name,
+    company: item.author.org }, rating: item.rating, price: item.price,
+    displayType: 'row', description: item.description, productType: item.type })
+    %>
+  </a>
+  <% }) %>
+  <!-- Dummy placeholders -->
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Lorem\ Labore\
     Ullamco\ Et\ Est\ Labore\ Dolore\ Cillum", cover: 'item-cover-4.jpg',
@@ -41,7 +20,7 @@
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
     co...', productType: 'Podcast' }) %>
   </div>
-  <!-- <div class="col-12 list-item">
+  <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Culpa\ Qui\ Veniam\
     Do\ Occaecat\ Eiusmod\ Incididunt\ Nisi\ Dolore\ Labore\ Est\ Officia",
     cover: 'item-cover-5.jpg', author: { photo: 'author-5.jpg', name: 'Joel\
@@ -121,5 +100,5 @@
     in\ laboris\ reprehenderit\ magna\ nulla\ amet\ aute.\ Dolor\ labore\
     pariatur\ non\ laborum\ qui\ tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\
     exercitation\ minim.\ Deserunt\ co...', productType: 'Video' }) %>
-  </div> -->
+  </div>
 </div>
