--- a/src/scss/widgets/cards/product.scss
+++ b/src/scss/widgets/cards/product.scss
@@ -116,6 +116,10 @@
   &[data-display-type="col"] {
     .product-cover {
       border-radius: 24px 24px 0 0;
+
+      img {
+        border-radius: 24px 24px 0 0;
+      }
     }
 
     .product-tag {
@@ -159,6 +163,10 @@
       width: 200px;
       border-radius: 24px 0 0 24px;
       flex-shrink: 0;
+
+      img {
+        border-radius: 24px 0 0 24px;
+      }
     }
 
     .product-tag {
