--- a/src/views/Explore/layout.html
+++ b/src/views/Explore/layout.html
@@ -6,7 +6,12 @@
         <div class="content-topbar" style="display: none">
           <div class="row">
             <div
-              class="topbar-wrap d-flex justify-content-between align-items-center"
+              class="
+                topbar-wrap
+                d-flex
+                justify-content-between
+                align-items-center
+              "
             >
               <div class="counter">
                 Showing <strong>1 - 15</strong> contents out of
@@ -32,7 +37,7 @@
         </div>
 
         <div class="content-catalog" style="display: none">
-          <%= require('./grid.html')() %>
+          <%= require('./grid.html')(templateData.items) %>
         </div>
 
         <div class="content-pagination" style="display: none">
