--- a/src/views/partials/author.html
+++ b/src/views/partials/author.html
@@ -2,7 +2,15 @@
 parseInt(obj.ratingValue) > 0 ? true : false %>
 <div class="author author-<%= size %> d-flex align-items-center">
   <div class="author-photo ratio ratio-1x1">
+    <% if (photo.indexOf('http') > -1) { %>
     <img src="<%= photo %>" alt="" class="rounded-circle" />
+    <% } else { %>
+    <img
+      src="<%= require(`../../images/${photo}`) %>"
+      alt=""
+      class="rounded-circle"
+    />
+    <% } %>
   </div>
   <% if (Array.isArray(name)) { %>
   <div class="author-more rounded-circle ratio ratio-1x1">
